--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,20 @@ project(complex)
 
 set(CMAKE_CXX_STANDARD 14)
 
+enable_testing()
+
+add_definitions(-std=gnu++17 -U__STRICT_ANSI__)
+
+set(LINKER_FLAGS1 -lcygwin)
+set(LINKER_FLAGS2 -lSDL2main)
+set(LINKER_FLAGS3 -lSDL2)
+set(LINKER_FLAGS4 -mwindows)
+
+add_subdirectory(googletest)
+include_directories(googletest/googletest/include)
+
 set(SOURCE_FILES lib.cpp)
-add_executable(complex main.cpp ${SOURCE_FILES})
+add_executable(complex main.cpp lib.h lib.cpp tests.cpp)
+add_executable(tests tests.cpp ${SOURCE_FILES})
+
+target_link_libraries(tests gtest)
